--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -1,4 +1,5 @@
-/********** Base styles **********/
+/*Base styles*/
+
 * {
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
@@ -9,6 +10,7 @@ h1 {
     margin-bottom: 30px;
     margin-left: auto;
     margin-right: auto;
+    
 }
 
 p {
@@ -33,7 +35,6 @@ h2 {
     padding-bottom: 5px;
 }
 
-/* Simple Responsive Framework. */
 .row {
     width: 100%;
 }
@@ -50,6 +51,7 @@ h2 {
 
 #title1 {
     background-color: blue;
+    color: white;
 
 }
 
@@ -60,9 +62,10 @@ h2 {
 
 #title3 {
     background-color: pink;
+    color: black;
 }
 
-/********** Large devices only **********/
+/*Large devices*/
 @media (min-width: 992px) {
 
     .col-lg-1,
@@ -130,7 +133,7 @@ h2 {
     }
 }
 
-/********** Medium devices only **********/
+/*Medium devices */
 @media (min-width: 768px) and (max-width: 991px) {
 
     .col-md-1,
@@ -198,7 +201,7 @@ h2 {
     }
 }
 
-/*small devices only*/
+/*small devices*/
 
 @media (max-width: 767px) {
 
